frontend/test/should_fail/autojoin.grg
match class SameCompany
{
	subject:namedObject;
	company:namedObject;
	person:namedObject;
}

test sameCompany(subject:namedObject) implements SameCompany
{
	subject -:WORKS_FOR-> company:namedObject <-:WORKS_FOR- person:namedObject;
}

match class SharedInterest
{
	subject:namedObject;
	interest:namedObject;
	person:namedObject;
}

test sharedInterest(subject:namedObject) implements SharedInterest
{
	subject -:INTERESTED_IN-> interest:namedObject <-:INTERESTED_IN- person:namedObject;
}

match class SameCompanySharedInterest
{
	subject:namedObject;
	company:namedObject;
	person:namedObject;
	interest:namedObject;
}

function naturalJoin(ref matchesSameCompany:array<match<sameCompany>>, ref matchesSharedInterest:array<match<sharedInterest>>) : array<match<class SameCompanySharedInterest>>
{
	auto(join<natural>(matchesSameCompany, matchesSharedInterest))
}

function cartesianJoin(ref matchesSameCompany:array<match<sameCompany>>, ref matchesSharedInterest:array<match<sharedInterest>>) : array<match<class SameCompanySharedInterest>>
{
	auto(join<cartesian>(matchesSameCompany, matchesSharedInterest))
}

function naturalJoinMC(ref matchesSameCompany:array<match<class SameCompany>>, ref matchesSharedInterest:array<match<class SharedInterest>>) : array<match<class SameCompanySharedInterest>>
{
	auto(join<natural>(matchesSameCompany, matchesSharedInterest))
}

function cartesianJoinMC(ref matchesSameCompany:array<match<class SameCompany>>, ref matchesSharedInterest:array<match<class SharedInterest>>) : array<match<class SameCompanySharedInterest>>
{
	auto(join<cartesian>(matchesSameCompany, matchesSharedInterest))
}

match class SameCompanySharedInterestExtracted
{
	var subject:string;
	var company:string;
	var person:string;
	var interest:string;
}
